# ProjectSFML

./: README.md
DeskProject/: CMakeLists.txt  bd.cpp  bd.h  bd.txt  flat.cpp  flat.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-DeskProject-Desktop_Qt_5_15_2_clang_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
build-DeskProject-Qt_6_5_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-DeskProject-Qt_6_5_2_for_macOS-Debug/.cmake/api/v1/reply/: codemodel-v2-671ad65c6e91a57cc4a4.json  directory-.-Debug-44d880389566cdf0795e.json  index-2023-09-27T14-54-08-0008.json  target-DeskProject-Debug-6ee301e690394375eab6.json  target-DeskProject_autogen_timestamp_deps-Debug-35f0d3af9723d0fc9f1d.json
build-DeskProject-Qt_6_5_2_for_macOS-Debug/.cmake/api/v1/reply.prev/: cache-v2-6f45b07bd0fc9d23e867.json  cmakeFiles-v1-d5ef1181c498771314c1.json  codemodel-v2-1e10c51462bcf0a755fd.json  directory-.-Debug-6ed4ee3191fc972a4ae0.json  index-2023-09-27T14-08-37-0469.json  target-DeskProject-Debug-7793ec654ee844d8d2f5.json  target-DeskProject_autogen-Debug-c711b0a5b3313176b597.json
build-DeskProject-Qt_6_5_2_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-DeskProject-Qt_6_5_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-DeskProject-Qt_6_5_2_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: QAction.BA3ABAC2DB57CF75.idx  QApplication.2204E3CB3815D3D0.idx  QApplication.CED1212A47B21705.idx  QCheckBox.EBB38FF222271030.idx  QComboBox.46334DA8C5394636.idx  QFormLayout.9060F0EA78F45EAF.idx  QGridLayout.EA0804C753710EF9.idx  QHBoxLayout.D22E4DD3DA9F7B56.idx  QHeaderView.5303733306519654.idx  QLabel.661EF4EF49EE6961.idx  QLayout.9401FA48E43D3324.idx  QListWidget.75829239FED9161D.idx  QMainWindow.9B9AAC267DE2C886.idx  QMenu.4EBCAE59BBC8780C.idx  QMenuBar.85A420627DEEE692.idx  QSpacerItem.E13CBE5A5CF56D3D.idx  QStatusBar.FA84CBF09141E6C3.idx  QString.DFB4FA3EA12457B2.idx  QTableWidget.85614CE832DE2098.idx  QVBoxLayout.81187FCFBCADBD8C.idx  QVariant.2A60C0F71921C4AD.idx  (+221 more)
build-DeskProject-Qt_6_5_2_for_macOS-Debug/DeskProject_autogen/: deps
build-DeskProject-Qt_6_5_2_for_macOS-Debug/DeskProject_autogen/EWIEGA46WW/: moc_mainwindow.cpp
build-DeskProject-Qt_6_5_2_for_macOS-Debug/DeskProject_autogen/include/: ui_mainwindow.h
